tests/build/fromlifetimes.stderr
error: Deriving structs with more than one lifetime is not supported
 --> tests/build/fromlifetimes.rs:4:15
  |
4 | struct Derived<'a, 'b> {
  |               ^
